@@ -17,6 +17,7 @@
 static int fuse_kern_chan_receive(struct fuse_chan *ch, char *buf, size_t size)
 {
     ssize_t res = read(fuse_chan_fd(ch), buf, size);
+    int err = errno;
     struct fuse_session *se = fuse_chan_session(ch);
 
     assert(se != NULL);
@@ -25,10 +26,10 @@ static int fuse_kern_chan_receive(struct fuse_chan *ch, char *buf, size_t size)
     if (res == -1) {
         /* EINTR means, the read() was interrupted, ENOENT means the
            operation was interrupted */
-        if (errno == EINTR || errno == ENOENT)
+        if (err == EINTR || err == ENOENT)
             return 0;
         /* ENODEV means we got unmounted, so we silenty return failure */
-        if (errno != ENODEV)
+        if (err != ENODEV)
             perror("fuse: reading device");
         return -1;
     }
@@ -43,6 +44,7 @@ static int fuse_kern_chan_send(struct fuse_chan *ch, const struct iovec iov[],
                                size_t count)
 {
     ssize_t res = writev(fuse_chan_fd(ch), iov, count);
+    int err = errno;
 
     if (res == -1) {
         struct fuse_session *se = fuse_chan_session(ch);
@@ -50,9 +52,9 @@ static int fuse_kern_chan_send(struct fuse_chan *ch, const struct iovec iov[],
         assert(se != NULL);
 
         /* ENOENT means the operation was interrupted */
-        if (!fuse_session_exited(se) && errno != ENOENT)
+        if (!fuse_session_exited(se) && err != ENOENT)
             perror("fuse: writing device");
-        return -errno;
+        return -err;
     }
     return 0;
 }
